--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,37 @@
 <resources>
     <string name="app_name">Inventory</string>
+
     // menu inserting dummy data
     <string name="action_insert_dummy_data">Insert Dummy Data</string>
-
     // menu delete entries
     <string name="action_delete_all_entries">Delete All Inventory</string>
-
     // save inventory data
     <string name="action_save">Save</string>
     // delete inventory data
     <string name="action_delete">Delete</string>
+
+
+   //  app content
+    <string name="opps_its_empty">Opps it\'s empty</string>
+
+    <string name="add_inventory_data">add inventory data</string>
+    <string name="Overview">Overview</string>
+    <string name="sale_b">sale button</string>
+
+    // hints
+    <string name="product_info">product info</string>
+    <string name="hint_name">Name</string>
+    <string name="hint_price">Price</string>
+    <string name="hint_quantity">Quantity</string>
+    <string name="supplier_info">Supplier info</string>
+    <string name="hint_supplier_name">Supplier Name</string>
+    <string name="hint_supplier_phone">Supplier Phone</string>
+    <string name="tap_call">Tap TO Call</string>
+
+
+
+
+
 
 
 </resources>
